tests/invalid/assign_to_typename.rk
class assign_to_typename_test {
    @main
    static def main() {
        array = 1;
    }
}